Bug 1202296 - Hide the MFTDecoder within MFTManager so that we can recreate it opaquely. r=cpearce

--HG--
extra : rebase_source : 8ce6adacd26ceaa243737db06fc652a8dd16bdc6